# mcp-wip

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
api/: models.py  routes.py
core/mcp_client/: client.py  memory_handler.py  models.py
core/mcp_server/: models.py  server.py
example/: main.py  server.py  write_resources.py
example/chat/: package-lock.json  package.json
example/chat/app/: root.tsx
example/chat/app/routes/: home.tsx
example/chat/app/widgets/: WidgetMenu.tsx  register.ts
example/chat/app/widgets/components/: ImageCarousel3.tsx  NewCalendar.tsx  NewCalendar2.tsx  QrScanner2.tsx  StockVisualizer.tsx
example/resources/indexes/: memvid.faiss  memvid.json
example/resources/widgets/: calendar.json  image-carousel.json  qr-code-scanner.json  stock-level-inspector.json
rag/: base.py  faiss_rag.py  memvid_rag.py
sdks/react/: WidgetRenderer.tsx  index.ts  package-lock.json  package.json  registry.ts
utils/: widget_json_converter.py
