[project]
name = "mcp-wip"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
rag = [
    "memvid>=0.1.3",
]
fastapi = [
    "fastapi>=0.119.0",
]
